--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parse": "^5.5.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
