--- a/backEnd/vercel.json
+++ b/backEnd/vercel.json
@@ -1,8 +1,7 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "server",
       "use": "@vercel/node"
     }
   ],
