--- a/backEnd/vercel.json
+++ b/backEnd/vercel.json
@@ -1,14 +1,15 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "server",
-      "use": "@vercel/node"
-    }
+   {
+       "src": "./index.js",
+       "use": "@vercel/node"
+   }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js"
-    }
+   {
+       "src": "/(.*)",
+       "dest": "/"
+   }
   ]
 }
