--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
